Fix problem with leading slash in filenames under ms-windows

A URL of the form file:///C:/abc.xyz is returned as /C:/abc.xyz when the
path() method is used. This causes the QFile::open() method to fail. The
QUrl::toLocalFile() method does return C:/abc.xyz in this case.

BUG: 395980
BUG: 399378